--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.9",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "amazing-time-picker": "^1.8.0",
     "chart.js": "^2.8.0",
     "hammerjs": "^2.0.8",
     "node-sass": "^4.12.0",
